--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.5",
     "google-map-react": "^0.22.3",
+    "rc-tooltip": "^3.4.2",
     "react": "^15.3.0",
     "react-dom": "^15.3.0"
   },
